# storage-bucket

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  poetry_pyproject.toml  pyproject.toml  setup.cfg  sitemap.xml
.circleci/: config.yml
.github/workflows/: test.yml
contrib/contributing/: index.html
contrib/dependencies/: index.html
contrib/gcp/: index.html
contrib/tests/: index.html
docs/: faq.md  index.md  usage.md
docs/contrib/: contributing.md  dependencies.md  gcp.md  tests.md
faq/: index.html
search/: search_index.json
storage_bucket/: __init__.py  __main__.py  bucket.py  client.py  constants.py  create.py  create_bucket.py  delete.py  delete_bucket.py  delete_file.py  download_file.py  enums.py  get.py  list.py  list_buckets.py  list_files.py  registries.py  schema.py  upload_file.py
storage_bucket/aws/: __init__.py  client.py  create.py  delete_bucket.py  schema.py
storage_bucket/gcp/: __init__.py  client.py  create.py  delete_bucket.py  schema.py
tests/: conftest.py  create_test.py  delete_file_test.py  delete_test.py  download_test.py  get_test.py  list_buckets_test.py  list_objects_test.py  list_test.py  test_bucket.py  test_client.py  test_create.py  test_delete.py  test_delete_file.py  test_download.py  test_download_file.py  test_get.py  test_list_buckets.py  test_list_files.py  test_list_objects.py  test_upload.py  upload_test.py
usage/: index.html
