[tool.poetry]
name = "storage-bucket"
version = "0.1.2"
description = "Easy to work with Google Cloud Platform Storage Bucket wrapper"
authors = ["Thomas Borgen <thomas@borgenit.no>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/thomasborgen/storage-bucket"

keywords = [
  "Storage Bucket",
  "GCP",
  "Google Cloud Platform",
  "monad"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-storage = "^1.28.1"
returns = "^0.13.0"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
wemake-python-styleguide = "^0.14.0"
pre-commit = "^2.3.0"
pytest-env = "^0.6.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
