[tool.poetry]
name = "storage-bucket"
version = "1.0.0"
description = "Easy to work with Google Cloud Platform Storage Bucket wrapper"
authors = ["Thomas Borgen <thomas@borgenit.no>", "Dmytro Chasovskyi <dmitriy.chasovskoy@gmail.com>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/thomasborgen/storage-bucket"

keywords = [
  "Storage Bucket",
  "GCP",
  "Google Cloud Platform",
  "monad",
  "functional programming"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
google-cloud-storage = "^1.29.0"
returns = "^0.14.0"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"
mypy = "^0.770"
isort = "^4.3.21"

safety = "^1.9.0"

pytest = "^5.4"
pytest-cov = "^2.8.1"
pytest-env = "^0.6.2"
mkdocs-material = "^5.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
